Store and displaying the User Inputs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Calculator</title>
     <link rel="stylesheet" href="Styles.css">
+    <script src="Calc.js" defer></script>
 </head>
 
 <body>
@@ -12,30 +13,30 @@
             <div class="Calculator">
                 <h1>Calculator</h1>
             </div>
-            <div class="outputbox">
+            <div id="outputbox">
 
             </div>
             <div class="buttons">
-                <button class="opt">C</button>
-                <button class="opt">[X]</button>
-                <button class="opt">%</button>
-                <button class="opt">/</button>
-                <button class="opd">7</button>
-                <button class="opd">8</button>
-                <button class="opd">9</button>
-                <button class="opt">X</button>
-                <button class="opd">4</button>
-                <button class="opd">5</button>
-                <button class="opd">6</button>
-                <button class="opt">-</button>
-                <button class="opd">1</button>
-                <button class="opd">2</button>
-                <button class="opd">3</button>
-                <button class="opt">+</button>
-                <button class="btn"></button>
-                <button class="opd">0</button>
-                <button class="opd">.</button>
-                <button class="eql">=</button>
+                <button class="opt" value="C">C</button>
+                <button class="opt" value="backspace">[X]</button>
+                <button class="opt" value="%">%</button>
+                <button class="opt" value="/">/</button>
+                <button class="opd" value="7">7</button>
+                <button class="opd" value="8">8</button>
+                <button class="opd" value="9">9</button>
+                <button class="opt" value="*">X</button>
+                <button class="opd" value="4">4</button>
+                <button class="opd" value="5">5</button>
+                <button class="opd" value="6">6</button>
+                <button class="opt" value="-">-</button>
+                <button class="opd" value="1">1</button>
+                <button class="opd" value="2">2</button>
+                <button class="opd" value="3">3</button>
+                <button class="opt" value="+">+</button>
+                <button class="opd" value="00">00</button>
+                <button class="opd" value="0">0</button>
+                <button class="opd" value=".">.</button>
+                <button class="eql" value="=">=</button>
             </div>
         </div>
     </div>
